footnotes; remove title

--- a/differential_geometry_in_hott/agda/html/group_extensions.html
+++ b/differential_geometry_in_hott/agda/html/group_extensions.html
@@ -8,7 +8,7 @@
   <style>
     html {
       line-height: 1.5;
-      font-family: Baskerville;
+      font-family: Georgia, serif;
       font-size: 20px;
       color: #1a1a1a;
       background-color: #fdfdfd;
@@ -159,9 +159,13 @@
     }
   </style>
   <link rel="stylesheet" href="Agda.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Belanosima">
   <style>
+  body {
+    font-family: 'Libre Baskerville', serif;
+  }
   h2 {
-    font-family: Quadrat Serial, sans-serif;
+    font-family: Belanosima, sans-serif;
   }
   </style>
   <!--[if lt IE 9]>
@@ -169,9 +173,6 @@
   <![endif]-->
 </head>
 <body>
-<header id="title-block-header">
-<h1 class="title">group_extensions</h1>
-</header>
 <nav id="TOC" role="doc-toc">
 <ul>
 <li><a href="#abstract" id="toc-abstract">Abstract</a></li>
@@ -183,27 +184,52 @@ theory, and Chern-Weil theory in homotopy type theory.</p>
 Test diagram
 <p><img src="4d0d79624ee63ff6de3dee35483ee1170f02cdf0.svg"
 style="display: block; margin-left: auto; margin-right: auto;" /></p>
-<pre class="Agda"><a id="715" class="Symbol">{-#</a> <a id="719" class="Keyword">OPTIONS</a> <a id="727" class="Pragma">--without-K</a> <a id="739" class="Pragma">--exact-split</a> <a id="753" class="Symbol">#-}</a>
+<p>The background on group extensions are <a href="#fn1"
+class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>, <a
+href="#fn2" class="footnote-ref" id="fnref2"
+role="doc-noteref"><sup>2</sup></a>, <a href="#fn3" class="footnote-ref"
+id="fnref3" role="doc-noteref"><sup>3</sup></a>.</p>
+<p>One way of thinking about bringing smooth manifolds into this group
+theoretic picture is in a post by Schreiber <a href="#fn4"
+class="footnote-ref" id="fnref4" role="doc-noteref"><sup>4</sup></a></p>
+<pre class="Agda"><a id="1565" class="Symbol">{-#</a> <a id="1569" class="Keyword">OPTIONS</a> <a id="1577" class="Pragma">--without-K</a> <a id="1589" class="Pragma">--exact-split</a> <a id="1603" class="Symbol">#-}</a>
 
-<a id="758" class="Keyword">module</a> <a id="765" href="group_extensions.html" class="Module Operator">group_extensions</a> <a id="782" class="Keyword">where</a>
+<a id="1608" class="Keyword">module</a> <a id="1615" href="group_extensions.html" class="Module Operator">group_extensions</a> <a id="1632" class="Keyword">where</a>
 
-<a id="789" class="Keyword">open</a> <a id="794" class="Keyword">import</a> <a id="801" href="foundation-core.universe-levels.html" class="Module">foundation-core.universe-levels</a>
-<a id="833" class="Keyword">open</a> <a id="838" class="Keyword">import</a> <a id="845" href="foundation-core.functions.html" class="Module">foundation-core.functions</a>
-<a id="871" class="Keyword">open</a> <a id="876" class="Keyword">import</a> <a id="883" href="foundation-core.identity-types.html" class="Module">foundation-core.identity-types</a>
+<a id="1639" class="Keyword">open</a> <a id="1644" class="Keyword">import</a> <a id="1651" href="foundation-core.universe-levels.html" class="Module">foundation-core.universe-levels</a>
+<a id="1683" class="Keyword">open</a> <a id="1688" class="Keyword">import</a> <a id="1695" href="foundation-core.functions.html" class="Module">foundation-core.functions</a>
+<a id="1721" class="Keyword">open</a> <a id="1726" class="Keyword">import</a> <a id="1733" href="foundation-core.identity-types.html" class="Module">foundation-core.identity-types</a>
 
-<a id="915" class="Comment">-- What is the analogue in HoTT of the fact from group extensions that we classify an extension by </a>
-<a id="1015" class="Comment">-- taking a set-based section of the splitting, seeing that those elements act on the left hand group,</a>
-<a id="1118" class="Comment">-- noting that this map into Aut G is not a homomorphism. There is a 2-cell that we can conjugate with that makes</a>
-<a id="1232" class="Comment">-- it a homomorphism. So together, the extension (plus the arbitrary choice of splitting) yeilds a 2-map to the 2-group</a>
-<a id="1352" class="Comment">-- AUT(G).</a>
-<a id="1363" class="Comment">-- For us, a splitting will be a section of a type family. This acts on loops with apd.</a>
-<a id="1451" class="Comment">-- So we want to prove some facts about apd and to what extent it&#39;s a homomorphism of loops.</a>
-<a id="1544" class="Comment">-- It doesn&#39;t send loops to loops, because it sends the loop p to a loop from fx to ap p fx.</a>
-<a id="1637" class="Comment">-- apd-hom :</a>
-<a id="1650" class="Comment">--   {l1 l2 : Level} {A : UU l1} {B : A → UU l2} (f : (a : A) → B a) {x : A}</a>
-<a id="1727" class="Comment">--   (p q : x ＝ x) → (apd f (p ∙ q)) ＝ ((apd ((tr B p) ∘ f) q) ∙ (apd (f) p))</a>
-<a id="1805" class="Comment">-- apd-hom f refl q = ?</a>
+<a id="1765" class="Comment">-- What is the analogue in HoTT of the fact from group extensions that we classify an extension by </a>
+<a id="1865" class="Comment">-- taking a set-based section of the splitting, seeing that those elements act on the left hand group,</a>
+<a id="1968" class="Comment">-- noting that this map into Aut G is not a homomorphism. There is a 2-cell that we can conjugate with that makes</a>
+<a id="2082" class="Comment">-- it a homomorphism. So together, the extension (plus the arbitrary choice of splitting) yeilds a 2-map to the 2-group</a>
+<a id="2202" class="Comment">-- AUT(G).</a>
+<a id="2213" class="Comment">-- For us, a splitting will be a section of a type family. This acts on loops with apd.</a>
+<a id="2301" class="Comment">-- So we want to prove some facts about apd and to what extent it&#39;s a homomorphism of loops.</a>
+<a id="2394" class="Comment">-- It doesn&#39;t send loops to loops, because it sends the loop p to a loop from fx to ap p fx.</a>
+<a id="2487" class="Comment">-- apd-hom :</a>
+<a id="2500" class="Comment">--   {l1 l2 : Level} {A : UU l1} {B : A → UU l2} (f : (a : A) → B a) {x : A}</a>
+<a id="2577" class="Comment">--   (p q : x ＝ x) → (apd f (p ∙ q)) ＝ ((apd ((tr B p) ∘ f) q) ∙ (apd (f) p))</a>
+<a id="2655" class="Comment">-- apd-hom f refl q = ?</a>
 
 </pre>
+<section id="footnotes" class="footnotes footnotes-end-of-document"
+role="doc-endnotes">
+<hr />
+<ol>
+<li id="fn1"><p>John Baez, “Week 223”:
+https://math.ucr.edu/home/baez/week223.html<a href="#fnref1"
+class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn2"><p>David Jaz Myers, Dissertation:
+https://jscholarship.library.jhu.edu/handle/1774.2/67618<a
+href="#fnref2" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn3"><p>https://ncatlab.org/nlab/show/group+extension<a
+href="#fnref3" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn4"><p>Urs Schreiber, “n-Transport and Higher Schreier Theory”:
+https://golem.ph.utexas.edu/category/2006/09/nconnections_and_higher_schrei.html<a
+href="#fnref4" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+</ol>
+</section>
 </body>
 </html>
