--- a/differential_geometry_in_hott/agda/html/group_extensions.html
+++ b/differential_geometry_in_hott/agda/html/group_extensions.html
@@ -181,7 +181,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Belanosima">
   <style>
   body {
-    font-family: 'Libre Baskerville', serif;
+    font-family: Baskerville, 'Libre Baskerville', serif;
   }
   h1, h2, h3, h4, h5, h6 {
     font-family: Belanosima, sans-serif;
@@ -479,26 +479,26 @@ the Eilenberg-Mac Lane type <span class="math inline">\(K(G, 1)\)</span>
 as the following HIT:</p>
 <h2 id="associated-bundles">Associated bundles</h2>
 <h2 id="group-extensions">Group extensions</h2>
-<pre class="Agda"><a id="11974" class="Symbol">{-#</a> <a id="11978" class="Keyword">OPTIONS</a> <a id="11986" class="Pragma">--without-K</a> <a id="11998" class="Pragma">--exact-split</a> <a id="12012" class="Symbol">#-}</a>
+<pre class="Agda"><a id="12017" class="Symbol">{-#</a> <a id="12021" class="Keyword">OPTIONS</a> <a id="12029" class="Pragma">--without-K</a> <a id="12041" class="Pragma">--exact-split</a> <a id="12055" class="Symbol">#-}</a>
 
-<a id="12017" class="Keyword">module</a> <a id="12024" href="group_extensions.html" class="Module Operator">group_extensions</a> <a id="12041" class="Keyword">where</a>
+<a id="12060" class="Keyword">module</a> <a id="12067" href="group_extensions.html" class="Module Operator">group_extensions</a> <a id="12084" class="Keyword">where</a>
 
-<a id="12048" class="Keyword">open</a> <a id="12053" class="Keyword">import</a> <a id="12060" href="foundation.universe-levels.html" class="Module">foundation.universe-levels</a>
-<a id="12087" class="Keyword">open</a> <a id="12092" class="Keyword">import</a> <a id="12099" href="foundation.function-types.html" class="Module">foundation.function-types</a>
-<a id="12125" class="Keyword">open</a> <a id="12130" class="Keyword">import</a> <a id="12137" href="foundation.identity-types.html" class="Module">foundation.identity-types</a>
+<a id="12091" class="Keyword">open</a> <a id="12096" class="Keyword">import</a> <a id="12103" href="foundation.universe-levels.html" class="Module">foundation.universe-levels</a>
+<a id="12130" class="Keyword">open</a> <a id="12135" class="Keyword">import</a> <a id="12142" href="foundation.function-types.html" class="Module">foundation.function-types</a>
+<a id="12168" class="Keyword">open</a> <a id="12173" class="Keyword">import</a> <a id="12180" href="foundation.identity-types.html" class="Module">foundation.identity-types</a>
 
-<a id="12164" class="Comment">-- What is the analogue in HoTT of the fact from group extensions that we classify an extension by </a>
-<a id="12264" class="Comment">-- taking a set-based section of the splitting, seeing that those elements act on the left hand group,</a>
-<a id="12367" class="Comment">-- noting that this map into Aut G is not a homomorphism. There is a 2-cell that we can conjugate with that makes</a>
-<a id="12481" class="Comment">-- it a homomorphism. So together, the extension (plus the arbitrary choice of splitting) yeilds a 2-map to the 2-group</a>
-<a id="12601" class="Comment">-- AUT(G).</a>
-<a id="12612" class="Comment">-- For us, a splitting will be a section of a type family. This acts on loops with apd.</a>
-<a id="12700" class="Comment">-- So we want to prove some facts about apd and to what extent it&#39;s a homomorphism of loops.</a>
-<a id="12793" class="Comment">-- It doesn&#39;t send loops to loops, because it sends the loop p to a loop from fx to ap p fx.</a>
-<a id="12886" class="Comment">-- apd-hom :</a>
-<a id="12899" class="Comment">--   {l1 l2 : Level} {A : UU l1} {B : A → UU l2} (f : (a : A) → B a) {x : A}</a>
-<a id="12976" class="Comment">--   (p q : x ＝ x) → (apd f (p ∙ q)) ＝ ((apd ((tr B p) ∘ f) q) ∙ (apd (f) p))</a>
-<a id="13054" class="Comment">-- apd-hom f refl q = ?</a>
+<a id="12207" class="Comment">-- What is the analogue in HoTT of the fact from group extensions that we classify an extension by </a>
+<a id="12307" class="Comment">-- taking a set-based section of the splitting, seeing that those elements act on the left hand group,</a>
+<a id="12410" class="Comment">-- noting that this map into Aut G is not a homomorphism. There is a 2-cell that we can conjugate with that makes</a>
+<a id="12524" class="Comment">-- it a homomorphism. So together, the extension (plus the arbitrary choice of splitting) yeilds a 2-map to the 2-group</a>
+<a id="12644" class="Comment">-- AUT(G).</a>
+<a id="12655" class="Comment">-- For us, a splitting will be a section of a type family. This acts on loops with apd.</a>
+<a id="12743" class="Comment">-- So we want to prove some facts about apd and to what extent it&#39;s a homomorphism of loops.</a>
+<a id="12836" class="Comment">-- It doesn&#39;t send loops to loops, because it sends the loop p to a loop from fx to ap p fx.</a>
+<a id="12929" class="Comment">-- apd-hom :</a>
+<a id="12942" class="Comment">--   {l1 l2 : Level} {A : UU l1} {B : A → UU l2} (f : (a : A) → B a) {x : A}</a>
+<a id="13019" class="Comment">--   (p q : x ＝ x) → (apd f (p ∙ q)) ＝ ((apd ((tr B p) ∘ f) q) ∙ (apd (f) p))</a>
+<a id="13097" class="Comment">-- apd-hom f refl q = ?</a>
 
 </pre>
 <h1 id="group-extensions-1">Group extensions</h1>
@@ -559,9 +559,27 @@ class="math inline">\(\alpha\)</span> is not a homomorphism, but it is
 up to a conjugation. If we view groups as 1-element categories and
 homomorphisms as functors, then <span
 class="math inline">\(\alpha\)</span> is a weak functor.</p>
-<p>What is weakness when we look at things in HoTT? What are
-conjugations? What is a map that isn’t a homorphism in HoTT but is a
-homomorphism up to a 2-morphism? Does this imply that <span
+<p>Let’s compare <span class="math inline">\(\alpha(xy)\)</span> to
+<span class="math inline">\(\alpha(x)\alpha(y)\)</span>. <span
+class="math display">\[\alpha(xy)(g) = s(xy)gs(xy)^{-1}\]</span> whereas
+<span class="math display">\[\alpha(x)(\alpha(y)(g)) =
+s(x)[s(y)gs(y)^{-1}]s(x)^{-1}\]</span> which are equal if <span
+class="math inline">\(s\)</span> is a homomorphism. But if <span
+class="math inline">\(s\)</span> is not, we need a “homomorphinator” to
+relate these two formulas. The obvious thing to do is to form <span
+class="math inline">\(h(x, y) = s(xy)s(x)^{-1}s(y)^{-1}\)</span>.
+Conjugating by <span class="math inline">\(h(x,y)\)</span> cancels the
+<span class="math inline">\(s(x)s(y)\)</span> factors and replaces them
+with <span class="math inline">\(s(xy)\)</span>. So a map that isn’t a
+homomorphism can nonetheless behave like one if we have the freedom to
+introduce a homomorphinator.</p>
+<p>What is weakness when we look at things in HoTT? (My current
+candidate: an unpointed map. The homomorphinator would then be a choice
+of path that restores pointedness.)</p>
+<p>What are conjugations? (My current candidate: changes of
+basepoint.)</p>
+<p>What is a map that isn’t a homorphism in HoTT but is a homomorphism
+up to a 2-morphism? Does this imply that <span
 class="math inline">\(E\)</span> ends up having a natural 2-type
 structure? It’s a union of <span class="math inline">\(BG\)</span>
 clones over the base <span class="math inline">\(X\)</span> and so by
@@ -571,9 +589,9 @@ class="math inline">\(\mathsf{BAut}BG\)</span> into <span
 class="math inline">\(BG\)</span> itself? Some ideas:</p>
 <ul>
 <li>there is a map <span class="math inline">\(f:BG\to BG=BG\)</span>
-given by changing the basepoint from <span
-class="math inline">\(*\)</span> to <span
-class="math inline">\(f(a)\)</span>.</li>
+where <span class="math inline">\(f(a)\)</span> is an equivalence that
+moves the basepoint from <span class="math inline">\(*\)</span> to <span
+class="math inline">\(a\)</span>.</li>
 <li>a path <span class="math inline">\(p:*=_{BG}a\)</span> can be
 concatenated to any other path, providing an automorphism of the space
 of <span class="math inline">\(G\)</span>-torsors, sending the torsor
@@ -586,6 +604,23 @@ class="math inline">\(BG=BG\)</span>.</li>
 <li>so having a map from <span class="math inline">\(BG\)</span> into
 <span class="math inline">\(BG=BG\)</span> may let us</li>
 </ul>
+<p>Tying this together might be the intuition that higher paths are more
+and more microscopic structure inside <span
+class="math inline">\(BG\)</span>, whereas the types <span
+class="math inline">\(BG=_{\mathsf{BAut}BG}BG\)</span> and then <span
+class="math inline">\(\mathrm{id}=_{BG=BG}\mathrm{id}\)</span> seem to
+go outward, or maybe more fruitfully, they go inward but inside <span
+class="math inline">\(\mathsf{BAut}BG\)</span>. I seem to want to relate
+these in a way I haven’t seen, where we can bring more structure inside
+<span class="math inline">\(BG\)</span> by looking in <span
+class="math inline">\(\mathsf{BAut}BG\)</span>.</p>
+<p>I believe I can define maps <span class="math inline">\(BG\to
+BG=BG\)</span> and from <span class="math inline">\(*=_{BG}a\to
+BG=BG\)</span> which utilize the homogeneity of <span
+class="math inline">\(BG\)</span>. Can this be clarified enough to see
+how we might introduce 2-paths in <span
+class="math inline">\(BG\)</span> which let us translate the Schreier
+story from 2-groups to 2-types?</p>
 <div id="refs" class="references csl-bib-body hanging-indent"
 role="doc-bibliography">
 <div id="ref-atiyah1983yang" class="csl-entry" role="doc-biblioentry">
