--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/html/discrete_gauge_theory.html
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/html/discrete_gauge_theory.html
@@ -289,7 +289,7 @@ type of <span class="math inline">\(G\)</span>-equivariant maps by <span
 class="math inline">\(X\to_G Y\)</span>.</p>
 <div class="mylemma">
 <p><strong>Lemma 1</strong>. <em>There is a natural equivalence <span
-class="math inline">\((X=_{TG}Y) \simeq (X\to_G Y)\)</span>.0◻</em></p>
+class="math inline">\((X=_{TG}Y) \simeq (X\to_G Y)\)</span>.</em></p>
 </div>
 <p>Denote by <span class="math inline">\(*\)</span> the torsor given by
 <span class="math inline">\(G\)</span> actions on its underlying set by
@@ -302,12 +302,12 @@ class="math inline">\(G\)</span>-set <span
 class="math inline">\((X,\phi)\)</span> is a <span
 class="math inline">\(G\)</span>-torsor if and only if there merely
 exists a <span class="math inline">\(G\)</span>-equivariant equivalence
-<span class="math inline">\(*\to_G X\)</span>.0◻</em></p>
+<span class="math inline">\(*\to_G X\)</span>.</em></p>
 </div>
 <div class="mycor">
 <p><strong>Corollary 1</strong>. <em>The pointed type <span
 class="math inline">\((TG,*)\)</span> is a <span
-class="math inline">\(\mathrm{K}(G,1)\)</span>.0◻</em></p>
+class="math inline">\(\mathrm{K}(G,1)\)</span>.</em></p>
 </div>
 <h2 data-number="2.1" id="univalent-replacement-for-torsors"><span
 class="header-section-number">2.1</span> Univalent replacement for
@@ -372,7 +372,7 @@ the conditions of the theorem are met when <span
 class="math inline">\(f_\bullet:M\to\mathrm{K}(\mathop{\mathrm{Aut}}\ensuremath{\mathbb{Z}},
 1)\)</span> is contractible. This amounts to a choice of direction for
 all the circles, and so deserves to be renamed that <span
-class="math inline">\(M\)</span> is <em>orientable</em>.</p>
+class="math inline">\(f\)</span> is <em>orientable</em>.</p>
 <p>And so we can continue to work with the classifying space <span
 class="math inline">\(\mathrm{EM}(G,1)\)</span> and study <span
 class="math inline">\(\mathrm{K}(G,1)\)</span>-fibrations, knowing that
@@ -746,7 +746,7 @@ back rotated clockwise by a quarter-turn.</p>
 class="math inline">\(R:C_4\to C_4\)</span> rotates by one quarter turn,
 one “click":</em></p>
 <div class="multicols">
-<p><em><span>2</span></em></p>
+
 <ul>
 <li><p><em><span class="math inline">\(R(c_1) =
 c_2\)</span></em></p></li>
@@ -785,7 +785,7 @@ class="math inline">\(T_2:\ensuremath{\mathbb{O}}\to\mathrm{EM}(\ensuremath{\mat
 by extending <span class="math inline">\(T_1\)</span> to the faces as
 follows:</em></p>
 <div class="multicols">
-<p><em><span>2</span></em></p>
+
 <ul>
 <li><p><em><span
 class="math inline">\(T_2(wbr)=H_R\)</span></em></p></li>
