added change tracking

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/html/discrete_gauge_theory.html
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/html/discrete_gauge_theory.html
@@ -115,7 +115,7 @@
 <li><p>curvature</p></li>
 <li><p>the index of a vector field,</p></li>
 </ul>
-<p>and attempt to prove</p>
+<p>and prove</p>
 <ul>
 <li><p>the Gauss-Bonnet theorem</p></li>
 <li><p>and the Poincaré-Hopf theorem.</p></li>
